<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:padding="5dip"
            android:text="@string/title_activity_golf_simulator_venue"
            android:textColor="#f62626"
            android:textSize="25sp"
            android:textStyle="italic" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="4dp"
            android:background="@color/stroke" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/title_textNama"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/text_golfNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_textNama"
            android:inputType="textCapWords"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/title_textAlamat"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/text_golfAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_textAlamat"
            android:inputType="textCapSentences"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/title_numTelpon"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/text_golfTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/hint_numTelepon"
            android:inputType="phone"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/title_btn_date_picker"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_golfTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/button_date_picker"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_golfTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_golfBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dip"
            android:padding="5dp"
            android:text="@string/button_book"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>